# dsp-arduino-serialplotter

./: .gitignore  ACLARACIONES-REVISION-PROFESOR.md  ANALISIS_COMPATIBILIDAD.md  DEPENDENCIES.md  DSP Completo.docx  DSP-Completo-Kuhn-Dominguez.md  DSP-Completo-Kühn-Domiguez.docx  DSP_Completo_UNIFICADO.md  EVALUACION_TP3.md  GUIA_CONFIGURACION.md  IMPLEMENTACION_ARMONICOS.md  INFORME_TP3_COMPLETO.md  Kuhn_Domingez_PDS_TPFinal.docx  MEDICIONES_Y_PRUEBAS.md  MEJORAS_Y_TEORIA_TP3.md  README.md  RESUMEN_PROBLEMAS.md  captura imagenes.docx  check_dependencies.bat  check_dependencies.sh  obtener.md
DSP-arduino/DSP/: DSP.ino  DSP.rar  README_Explicacion_Detallada.md  adc.cpp  prescaler.h  usart.h
DSP-arduino/DSP/Arduino_Uno_Auto_Waveforms/: Arduino_Uno_Auto_Waveforms.ino  README.md  README_ACTUALIZADO.md  tablas_6bit.h  timer1.h
DSP-arduino/DSP/Arduino_Uno_Optimized_Reader/: Arduino_Uno_Optimized_Reader.ino
DSP-arduino/DSP/DSP_Intermedio/: DSP_Optimizado_Legible.ino  adc_intermedio.h  timer1_intermedio.h
DSP-arduino/DSP/DSP_Tutorial/: timer1_tutorial.h
DSP-arduino/DSP/Tutorial_Comentado/: DSP_Tutorial.ino  README_TUTORIAL.md  adc_tutorial.h  prescaler_tutorial.h  tablas_tutorial.h  timer1_tutorial.h
DSP-arduino/DSP/separado/: adc.cpp  adc.h  (+5 more)
DSP-arduino/DSP_Intermedio/: DSP_Intermedio.ino  README.md  adc.cpp  adc.h  adc_original.cpp  adc_original.h  prescaler.h  tablas.h  timer1.h  timer1_original.h
DSP-arduino/DSP_Overclock/: DSP_Overclock.ino  README_OVERCLOCK.md  adc.cpp  adc.h  tablas.h  timer1.h  usart_overclock.h
DSP-arduino/DSP_Tutorial/: DSP_Tutorial.ino  adc_tutorial.cpp  adc_tutorial.h  usart_tutorial.h
SerialPlotter/: CMakeLists.txt  DOCUMENTACION.md  README.md  copy_dlls_debug.bat
SerialPlotter/src/: Buffers.h  Console.cpp  Console.h  FFT.cpp  FFT.h  MainWindow.cpp  MainWindow.h  Serial.cpp  Serial.h  Settings.cpp  Settings.h  Widgets.h  main.cpp  main.h
(+6 files in other folders)
